openstack/elektra/templates/puma-metrics-service.yaml
kind: Service
apiVersion: v1

metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9235"
  name: puma-metrics

spec:
  clusterIP: None
  selector:
    name: elektra
  ports:
    - port: 9235
