openstack/elektra/templates/service.yaml
kind: Service
apiVersion: v1

metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
  name: elektra

spec:
  selector:
    name: elektra
  ports:
    - port: 80
